<resources>
    <string name="app_name">demo</string>
    <string name="请输入自我介绍">请输入自我介绍</string>
    <string name="_1920年12月">1920年12月</string>
    <string name="出生日期">出生日期</string>
    <string name="女">女</string>
    <string name="个人简介">个人简介</string>
    <string name="性别">性别</string>
    <string name="用户名">用户名</string>
    <string name="基本资料">基本资料</string>
    <string name="保存">保存</string>
    <string name="头像">头像</string>
    <string name="取消">取消</string>
    <string name="_13156523986">13156523986</string>


</resources>